# ArtificialSystem

./: .gitignore  CMakeLists.txt
Artificial/: MemoryCreateOption.h  TalkToOption.h
Artificial/1/: glasstown_create.txt
